<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dutchwords.edu.dutchwords.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText android:id="@+id/edit_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_definition" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="addWord"
        android:layout_below="@+id/edit_definition"
        android:layout_alignParentStart="true"
        android:layout_marginTop="132dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

    <EditText android:id="@+id/edit_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_translation"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/edit_definition"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get"
        android:onClick="mainGetWord"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/button_add"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:onClick="mainSearchWord"
        android:layout_alignBaseline="@+id/button_get"
        android:layout_toEndOf="@+id/button_get"
        android:layout_marginStart="18dp"
        android:layout_below="@+id/button_add"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:onClick="clearWord"
        android:layout_alignBaseline="@+id/button_add"
        android:layout_toEndOf="@+id/button_add"
        android:layout_marginStart="18dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />
</RelativeLayout>
